# lesson-c-todo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  array.c  consts.c  fopen.c  functions.c  if_else_iter.c  install_requirer.sh  malloc.c  person.c  person.h  pointers.c  strings.c  structs.c  structs_array.c  structs_functions.c  todos.c  todos.txt.example  toolchain-mingw.cmake  types.c
errors/: README.md  errors.c  errors.h
files/: .gitignore  file-contents.c  test.txt
include/: error.h  errors.h  print.h  test.h  todo.h  todo_common.h  todo_filter.h  todo_list.h  todo_sort.h  todo_store_simple.h  tui.h  ui.h  utils.h
memory/: .gitignore  README.md  heap.c  stack.c
shared-library/: .gitignore  Makefile  README.md  add.c  main.c  project_structure.dot
src/: error.c  errors.c  file.c  main.c  print.c  test.c  todo.c  todo_filter.c  todo_list.c  todo_sort.c  todo_store_simple.c  todos.c  todos_screen.c  tui.c  ui.c  utils.c
tests/: helpers.c  test.c  test_error.c  test_errors.c  test_file.c  test_main.c  test_todo.c  test_todo_filter.c  test_todo_list.c  test_todo_screen.c  test_todo_sort.c  test_todo_store_simple.c  test_todos.c  test_tui.c  test_utils.c
